--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,36 +1,40 @@
 ---
+version: 2
+project_name: vmrss
+
+before:
+  hooks:
+    - go mod tidy
+    - go generate ./...
+
 builds:
   - env:
       - CGO_ENABLED=0
     mod_timestamp: "{{ .CommitTimestamp }}"
     flags:
       - -trimpath
-    ldflags:
-      - "-s -w"
+    goarch:
+      - amd64
+      - arm64
     goos:
       - linux
       - darwin
-    goarch:
-      - amd64
-      - arm
-      - arm64
-    # ignore:
-    #   - goos: darwin
-    #     goarch: "386"
-    #   - goos: darwin
-    #     goarch: "arm64"
-    binary: "{{ .ProjectName }}_v{{ .Version }}"
 archives:
-   - format: binary
-     name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
-nfpms:
-  - formats:
-      - deb
-      - rpm
+  - format: binary
+    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
 checksum:
   name_template: "{{ .ProjectName }}_{{ .Version }}_SHA256SUMS"
   algorithm: sha256
 release:
   draft: false
 changelog:
-  skip: true
+  disable: true
+snapshot:
+  name_template: "{{ .Tag }}-next"
+nfpms:
+  - package_name: "vmrss"
+    maintainer: rwxd <git@rwxd.de>
+    description: "Simple tool to show the memory usage of a process and its children"
+    formats:
+      - deb
+      - rpm
